<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:background="@drawable/login_background">>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/youchat"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name" />

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D81B60"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"

            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawablePadding="16dp"
                android:drawableTint="@android:color/primary_text_dark_nodisable"
                android:padding="10dp"
                android:textColor="@android:color/primary_text_light"
                android:textColorHint="@android:color/primary_text_dark"
                android:hint="@string/email1" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D81B60"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_outline_24dp"
                android:drawablePadding="16dp"
                android:drawableTint="@android:color/primary_text_dark_nodisable"
                android:padding="10dp"
                android:textColor="@android:color/primary_text_light"
                android:textColorHint="@android:color/primary_text_dark"
                android:inputType="textPassword"
                android:hint="@string/password2"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/login"
            android:backgroundTint="@color/colorAccent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@android:color/primary_text_light"/>

        <TextView android:id="@+id/login_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/no_account_yet_create_one"
            android:gravity="center"
            android:textSize="16sp"/>

    </LinearLayout>
</ScrollView>